[tool.poetry]
name = "raccoon-exchange-service"
version = "0.1.0"
description = ""
authors = ["Zsolt Mester <22896196+meister245@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "raccoon_exchange_service"}]

[tool.poetry.dependencies]
python = "^3.10"
ccxt = "^2.9.16"
fastapi = "^0.88.0"
motor = "^3.3.1"
uvicorn = "^0.20.0"
beanie = "^1.22.6"
requests = "^2.31.0"
redis = "^4.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"